--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation "io.springfox:springfox-boot-starter:3.0.0"
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
