--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.3.0'
+	implementation 'io.github.bonigarcia:webdrivermanager:5.2.3'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
