Adding Chrome and ChromeDriver BuildPacks

--- a/app.json
+++ b/app.json
@@ -16,6 +16,8 @@
   "buildpacks": [
     {
       "url": "heroku/gradle"
+      "url": "heroku/heroku-buildpack-chromedriver"
+      "url": "heroku/heroku-buildpack-google-chrome"
     }
   ],
   "addons": [
