--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 	implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
 	implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
+	implementation 'com.opencsv:opencsv:5.7.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
