--- a/render.yaml
+++ b/render.yaml
@@ -9,15 +9,13 @@ services:
     dockerfilePath: Dockerfile
     region: frankfurt
     plan: free
+    healthCheckPath: /health
     numInstances: 1
     envVars:
       - key: ROADCC_LEAGUE_NAME
         value: yourLeagueName
-        sync: false
       - key: ROADCC_USERNAME
         value: yourUsername
-        sync: false
       - key: ROADCC_PASSWORD
         value: yourPassword
-        sync: false
 
