--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.9'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-	id 'java'
+    id 'java'
+    id 'org.springframework.boot' version '3.0.5'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.lukegjpotter.tools'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
-	implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
-	implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
-	implementation 'com.opencsv:opencsv:5.7.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
+    implementation 'com.opencsv:opencsv:5.7.1'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
