Removing the *-plain.jar file that Gradle is making.

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Remove the *-plain.jar file from being created.
+jar {
+    enabled = false
+}
