--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
     implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
     implementation 'com.opencsv:opencsv:5.7.1'
