Added a WebDriveWait to ensure correct number of Used Transfers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.transfer.component.TransferSeleniumComponent=TRACE
+logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.transfer.component.TransferSeleniumComponent=INFO
+logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.teams.component.TeamSeleniumComponent=TRACE
