Correcting Standings Endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.transfer.component.TransferSeleniumComponent=INFO
 logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.teams.component.TeamSeleniumComponent=INFO
+logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.standings.component.StandingSeleniumComponent=INFO
