Preparing for 2024 Tour with version upgrades, instruction upgrades, nicknames, etc.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Chrome for Testing version, set this to match your Chrome for Testing version.
+version.chromefortesting=126.0.6478.126
+# Logging Levels for Debugging.
 logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.transfer.component.TransferSeleniumComponent=INFO
 logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.teams.component.TeamSeleniumComponent=INFO
 logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.standings.component.StandingSeleniumComponent=INFO
+logging.level.com.lukegjpotter.tools.fantasycyclingleaguetools.FantasyCyclingLeagueToolsApplication=INFO
