Adding spring.application.name to application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=fantasy-cycling-league-tools
 # Chrome for Testing version, set this to match your Chrome for Testing version.
 version.chromefortesting=126.0.6478.126
 # Logging Levels for Debugging.
